--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,194 +22,196 @@
         android:layout_height="match_parent"
         android:visibility="visible">
 
-            <android.support.v7.widget.CardView
-                android:id="@+id/cv"
-                android:layout_width="300dp"
-                android:layout_height="300dp"
-                android:layout_centerInParent="true"
-                app:cardCornerRadius="6dp"
-                app:cardElevation="3dp"
-                app:cardUseCompatPadding="true">
+        <android.support.v7.widget.CardView
+            android:id="@+id/cv"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            android:layout_centerInParent="true"
+            app:cardCornerRadius="6dp"
+            app:cardElevation="3dp"
+            app:cardUseCompatPadding="true">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="45dp"
+                    android:layout_marginTop="10dp">
+
+                    <View
+                        android:layout_width="8dp"
+                        android:layout_height="match_parent"
+                        android:layout_alignParentStart="true"
+                        android:background="#818486" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="50dp"
+                        android:text="@string/login"
+                        android:textColor="@color/colorPrimary"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginEnd="50dp"
+                        android:layout_marginStart="50dp"
+                        android:background="@android:color/white"
+                        android:src="@drawable/logos" />
+                </RelativeLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
+                    android:layout_height="50dp"
+                    android:layout_marginTop="10dp"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
+                    android:orientation="horizontal"
+                    android:paddingEnd="30dp"
+                    android:paddingStart="50dp">
 
-                    <RelativeLayout
+                    <AutoCompleteTextView
+                        android:id="@+id/email"
                         android:layout_width="match_parent"
-                        android:layout_height="45dp"
-                        android:layout_marginTop="10dp">
+                        android:layout_height="wrap_content"
+                        android:hint="@string/prompt_email"
+                        android:inputType="textEmailAddress"
+                        android:textColor="#818486"
+                        android:textCursorDrawable="@drawable/bg_input_cursor"
+                        android:textSize="13sp"
+                        android:visibility="gone" />
 
-                        <View
-                            android:layout_width="8dp"
-                            android:layout_height="match_parent"
-                            android:layout_alignParentStart="true"
-                            android:background="#818486" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
-                            android:layout_marginStart="50dp"
-                            android:text="@string/login"
-                            android:textColor="@color/colorPrimary"
-                            android:textSize="18sp"
-                            android:textStyle="bold" />
-
-                        <ImageView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
-                            android:layout_marginEnd="50dp"
-                            android:layout_marginStart="50dp"
-                            android:background="@android:color/white"
-                            android:src="@drawable/logos" />
-                    </RelativeLayout>
-
-                    <LinearLayout
+                    <android.support.design.widget.TextInputLayout
                         android:layout_width="match_parent"
-                        android:layout_height="50dp"
-                        android:layout_marginTop="10dp"
-                        android:focusable="true"
-                        android:focusableInTouchMode="true"
-                        android:orientation="horizontal"
-                        android:paddingEnd="30dp"
-                        android:paddingStart="50dp">
+                        android:layout_height="wrap_content"
+                        android:textColorHint="#c5c5c5">
 
-                        <AutoCompleteTextView
-                            android:id="@+id/email"
+                        <android.support.design.widget.TextInputEditText
+                            android:id="@+id/emails"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:hint="@string/prompt_email"
                             android:inputType="textEmailAddress"
                             android:textColor="#818486"
                             android:textCursorDrawable="@drawable/bg_input_cursor"
-                            android:textSize="13sp"
-                            android:visibility="gone"/>
-
-                        <android.support.design.widget.TextInputLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:textColorHint="#c5c5c5">
-
-                            <android.support.design.widget.TextInputEditText
-                                android:id="@+id/emails"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:hint="@string/prompt_email"
-                                android:inputType="textEmailAddress"
-                                android:textColor="#818486"
-                                android:textCursorDrawable="@drawable/bg_input_cursor"
-                                android:textSize="13sp" />
-                        </android.support.design.widget.TextInputLayout>
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="50dp"
-                        android:orientation="horizontal"
-                        android:paddingEnd="30dp"
-                        android:paddingStart="50dp">
-
-                        <android.support.design.widget.TextInputLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:textColorHint="#c5c5c5">
-
-                            <android.support.design.widget.TextInputEditText
-                                android:id="@+id/password"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:hint="@string/prompt_password"
-                                android:inputType="textPassword"
-                                android:textColor="#818486"
-                                android:textCursorDrawable="@drawable/bg_input_cursor"
-                                android:textSize="13sp" />
-                        </android.support.design.widget.TextInputLayout>
-                    </LinearLayout>
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="60dp"
-                        android:layout_marginTop="25dp"
-                        android:gravity="center">
-
-                        <Button
-                            android:id="@+id/email_sign_in_button"
-                            android:layout_width="150dp"
-                            android:layout_height="50dp"
-                            android:background="@drawable/bt_shape"
-                            android:stateListAnimator="@drawable/state_list_animator_z"
-                            android:text="@string/action_sign_in_short"
-                            android:textColor="#d3d3d3" />
-                    </RelativeLayout>
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginTop="5dp"
-                        android:text="@string/forgot_your_password"
-                        android:textColor="#9a9a9a"
-                        android:textSize="12sp" />
+                            android:textSize="13sp" />
+                    </android.support.design.widget.TextInputLayout>
                 </LinearLayout>
-            </android.support.v7.widget.CardView>
 
-            <!--<android.support.design.widget.TextInputLayout-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content">-->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:orientation="horizontal"
+                    android:paddingEnd="30dp"
+                    android:paddingStart="50dp">
 
-            <!--<AutoCompleteTextView-->
-            <!--android:id="@+id/email"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:hint="@string/prompt_email"-->
-            <!--android:inputType="textEmailAddress"-->
-            <!--android:maxLines="1"-->
-            <!--android:singleLine="true" />-->
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textColorHint="#c5c5c5">
 
-            <!--</android.support.design.widget.TextInputLayout>-->
+                        <android.support.design.widget.TextInputEditText
+                            android:id="@+id/password"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/prompt_password"
+                            android:inputType="textPassword"
+                            android:textColor="#818486"
+                            android:textCursorDrawable="@drawable/bg_input_cursor"
+                            android:textSize="13sp" />
+                    </android.support.design.widget.TextInputLayout>
+                </LinearLayout>
 
-            <!--<android.support.design.widget.TextInputLayout-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content">-->
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:layout_marginTop="25dp"
+                    android:gravity="center">
 
-            <!--<android.support.design.widget.TextInputEditText-->
-            <!--android:id="@+id/password"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:hint="@string/prompt_password"-->
-            <!--android:imeActionId="6"-->
-            <!--android:imeActionLabel="@string/action_sign_in_short"-->
-            <!--android:imeOptions="actionUnspecified"-->
-            <!--android:inputType="textPassword"-->
-            <!--android:maxLines="1"-->
-            <!--android:singleLine="true" />-->
+                    <Button
+                        android:id="@+id/email_sign_in_button"
+                        android:layout_width="150dp"
+                        android:layout_height="50dp"
+                        android:background="@drawable/bt_shape"
+                        android:stateListAnimator="@drawable/state_list_animator_z"
+                        android:text="@string/action_sign_in_short"
+                        android:textColor="@color/colorPrimary" />
+                </RelativeLayout>
 
-            <!--</android.support.design.widget.TextInputLayout>-->
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="5dp"
+                    android:text="@string/forgot_your_password"
+                    android:textColor="#9a9a9a"
+                    android:textSize="12sp"
+                    android:visibility="gone"/>
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
 
-            <!--<Button-->
-            <!--android:id="@+id/email_sign_in_button"-->
-            <!--style="?android:textAppearanceSmall"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginTop="16dp"-->
-            <!--android:text="@string/action_sign_in"-->
-            <!--android:textStyle="bold" />-->
+        <!--<android.support.design.widget.TextInputLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content">-->
 
-            <!--<android.support.design.widget.FloatingActionButton-->
-                <!--android:id="@+id/fab"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_alignEnd="@id/cv"-->
-                <!--android:layout_alignTop="@id/cv"-->
-                <!--android:layout_marginEnd="-20dp"-->
-                <!--android:layout_marginTop="25dp"-->
-                <!--android:onClick="clickRegisterLayout"-->
-                <!--android:src="@drawable/ic_person_add_black_24dp"-->
-                <!--android:transitionName="loginFab"-->
-                <!--app:fabSize="normal" />-->
+        <!--<AutoCompleteTextView-->
+        <!--android:id="@+id/email"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:hint="@string/prompt_email"-->
+        <!--android:inputType="textEmailAddress"-->
+        <!--android:maxLines="1"-->
+        <!--android:singleLine="true" />-->
+
+        <!--</android.support.design.widget.TextInputLayout>-->
+
+        <!--<android.support.design.widget.TextInputLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content">-->
+
+        <!--<android.support.design.widget.TextInputEditText-->
+        <!--android:id="@+id/password"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:hint="@string/prompt_password"-->
+        <!--android:imeActionId="6"-->
+        <!--android:imeActionLabel="@string/action_sign_in_short"-->
+        <!--android:imeOptions="actionUnspecified"-->
+        <!--android:inputType="textPassword"-->
+        <!--android:maxLines="1"-->
+        <!--android:singleLine="true" />-->
+
+        <!--</android.support.design.widget.TextInputLayout>-->
+
+        <!--<Button-->
+        <!--android:id="@+id/email_sign_in_button"-->
+        <!--style="?android:textAppearanceSmall"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginTop="16dp"-->
+        <!--android:text="@string/action_sign_in"-->
+        <!--android:textStyle="bold" />-->
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignEnd="@id/cv"
+            android:layout_alignTop="@id/cv"
+            android:layout_marginEnd="-20dp"
+            android:layout_marginTop="25dp"
+            android:onClick="clickRegisterLayout"
+            android:transitionName="loginFab"
+            app:fabSize="normal"
+            app:srcCompat="@drawable/ic_person_add_black_24dp"
+            android:visibility="gone"/>
     </RelativeLayout>
 
 </RelativeLayout>
