--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,11 +22,11 @@
         android:clickable="true"
         android:focusable="true"
         android:foreground="?attr/selectableItemBackground"
+        android:visibility="gone"
         app:itemBackground="@color/colorPrimary"
         app:itemIconTint="@android:color/white"
         app:itemTextColor="@android:color/white"
-        app:menu="@menu/navigation"
-        android:visibility="gone"/>
+        app:menu="@menu/navigation" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -40,7 +40,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:background="@color/colorPrimary"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:visibility="gone">
 
             <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
@@ -51,8 +52,8 @@
                 android:background="@drawable/item_bg"
                 android:clickable="true"
                 android:focusable="true"
-                android:onClick="btClick"
                 android:minWidth="@dimen/bottom_navigation_min_width"
+                android:onClick="btClick"
                 android:paddingLeft="@dimen/bottom_navigation_padding_left"
                 android:paddingRight="@dimen/bottom_navigation_padding_right">
 
@@ -109,8 +110,8 @@
                 android:background="@drawable/item_bg"
                 android:clickable="true"
                 android:focusable="true"
-                android:onClick="btClick"
                 android:minWidth="@dimen/bottom_navigation_min_width"
+                android:onClick="btClick"
                 android:paddingLeft="@dimen/bottom_navigation_padding_left"
                 android:paddingRight="@dimen/bottom_navigation_padding_right">
 
@@ -167,8 +168,8 @@
                 android:background="@drawable/item_bg"
                 android:clickable="true"
                 android:focusable="true"
-                android:onClick="btClick"
                 android:minWidth="@dimen/bottom_navigation_min_width"
+                android:onClick="btClick"
                 android:paddingLeft="@dimen/bottom_navigation_padding_left"
                 android:paddingRight="@dimen/bottom_navigation_padding_right">
 
@@ -217,30 +218,41 @@
             </FrameLayout>
         </LinearLayout>
 
-        <com.aurelhubert.ahbottomnavigation.AHBottomNavigation
-            android:id="@+id/bottom_navigation"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:background="?attr/selectableItemBackground"
-            android:clickable="true"
-            android:focusable="true"
-            android:visibility="gone" />
     </LinearLayout>
-    <LinearLayout
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:gravity="center|end"
-        android:orientation="vertical"
-        android:layout_marginBottom="56dp">
+        android:layout_gravity="right|bottom"
+        android:layout_marginBottom="88dp"
+        android:visibility="gone"
+        app:srcCompat="@drawable/ic_search_black_24dp"
+        app:useCompatPadding="true" />
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            app:srcCompat="@drawable/ic_search_black_24dp"
-            android:visibility="visible" />
-    </LinearLayout>
+    <com.aurelhubert.ahbottomnavigation.AHBottomNavigation
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:background="?attr/selectableItemBackground"
+        android:clickable="true"
+        android:focusable="true"
+        android:visibility="visible" />
+    <!--<LinearLayout-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_gravity="bottom|end"-->
+    <!--android:gravity="center|end"-->
+    <!--android:orientation="vertical"-->
+    <!--android:layout_marginBottom="56dp">-->
+
+    <!--<android.support.design.widget.FloatingActionButton-->
+    <!--android:id="@+id/fab"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_margin="16dp"-->
+    <!--app:srcCompat="@drawable/ic_search_black_24dp"-->
+    <!--android:visibility="visible" />-->
+    <!--</LinearLayout>-->
 </android.support.design.widget.CoordinatorLayout>
