--- a/app/src/main/res/layout/class_item_row.xml
+++ b/app/src/main/res/layout/class_item_row.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="@dimen/activity_horizontal_margin"
+    android:padding="8dp"
     android:id="@+id/rlmasuk">
 
     <android.support.v7.widget.CardView
