--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -43,7 +43,13 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:windowBackground">@drawable/bgs</item>
     </style>
-
+    <style name="MyButtonBlue">
+        <item name="colorButtonNormal">#1976D2</item>
+        <item name="colorControlHighlight">#2196F3</item>
+        <item name="android:textColorPrimary">@color/colorText</item>
+        <item name="android:minHeight">0dp</item>
+        <item name="android:minWidth">0dp</item>
+    </style>
     <style name="MyButtonOrange">
         <item name="colorButtonNormal">@color/colorAccent</item>
         <item name="android:textColorPrimary">@color/colorText</item>
