--- a/app/src/main/res/layout/class_item_row.xml
+++ b/app/src/main/res/layout/class_item_row.xml
@@ -109,7 +109,8 @@
                 android:layout_marginTop="4dp"
                 android:focusable="false"
                 android:padding="8dp"
-                android:text="" />
+                android:text=""
+                android:visibility="gone"/>
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 </RelativeLayout>
