--- a/app/src/main/res/layout/activity_janus.xml
+++ b/app/src/main/res/layout/activity_janus.xml
@@ -1,18 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <WebView
-        android:id="@+id/wvWB"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:background="@color/colorPrimaryDark" />
+    android:layout_height="match_parent"
+    android:background="@drawable/bgclassroom">
 
     <android.opengl.GLSurfaceView
         android:id="@+id/glview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:background="@drawable/bgclassroom"/>
     <!--<android.view.SurfaceView-->
     <!--android:id="@+id/SurfaceView"-->
     <!--android:layout_width="match_parent"-->
