--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -115,7 +115,8 @@
                     <android.support.design.widget.TextInputLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textColorHint="#c5c5c5">
+                        android:textColorHint="#c5c5c5"
+                        app:passwordToggleEnabled="true">
 
                         <android.support.design.widget.TextInputEditText
                             android:id="@+id/password"
