--- a/app/src/main/res/layout/fragment_class.xml
+++ b/app/src/main/res/layout/fragment_class.xml
@@ -1,8 +1,11 @@
 <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#f1f5f7"
+    android:fillViewport="true"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.apps.indiclass.fragment.ClassFragment">
 
     <LinearLayout
@@ -39,7 +42,6 @@
                 android:scrollbars="vertical" />
         </LinearLayout>
 
-
         <LinearLayout
             android:id="@+id/llWait"
             android:layout_width="match_parent"
@@ -68,6 +70,7 @@
                 android:clipToPadding="false"
                 android:scrollbars="vertical" />
         </LinearLayout>
+
         <LinearLayout
             android:id="@+id/llPass"
             android:layout_width="match_parent"
@@ -96,16 +99,33 @@
                 android:clipToPadding="false"
                 android:scrollbars="vertical" />
         </LinearLayout>
-        <TextView
-            android:id="@+id/tvnoclassdetail"
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@android:color/white"
-            android:gravity="center|center_horizontal"
-            android:padding="8dp"
-            android:text="Kamu tidak memiliki kelas di tanggal ini"
-            android:textColor="#757575"
-            android:textSize="16sp"
-            android:visibility="gone" />
+            android:layout_height="match_parent"
+            android:background="@color/white"
+            android:layout_gravity="center"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/imgNo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/class_no"
+                android:layout_gravity="center"
+                android:visibility="gone" />
+
+            <TextView
+                android:id="@+id/tvnoclassdetail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@android:color/white"
+                android:gravity="center|center_horizontal"
+                android:padding="8dp"
+                android:text="Kamu tidak memiliki kelas di tanggal ini"
+                android:textColor="#757575"
+                android:textSize="18sp"
+                android:visibility="gone" />
+        </LinearLayout>
     </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
